@@ -20,6 +20,17 @@ class XiaoluMama(models.Model):
         (INVALID,u'失效'),
     )
     
+    NONE    = 'none'
+    PROFILE = 'profile'
+    PAY     = 'pay'
+    PASS    = 'pass'
+    PROGRESS_CHOICES = (
+        (NONE,u'未申请'),
+        (PROFILE,u'填写资料'),
+        (PAY,u'支付押金'),
+        (PASS,u'申请成功'),
+    )
+    
     CHARGED  = 'charged'
     UNCHARGE = 'uncharge'
     FROZEN = 'frozen'
@@ -52,6 +63,10 @@ class XiaoluMama(models.Model):
     charge_status = models.CharField(max_length=16,blank=True,db_index=True,
                                        choices=CHARGE_STATUS_CHOICES,
                                        default=UNCHARGE,verbose_name=u'接管状态')
+    
+    progress = models.CharField(max_length=8,blank=True,db_index=True,
+                               choices=PROGRESS_CHOICES,
+                               default=NONE,verbose_name=u'申请进度')
     
     objects = XiaoluMamaManager()
     
@@ -92,7 +107,14 @@ class XiaoluMama(models.Model):
             return DjangoUser.objects.get(id=self.manager).username
         except:
             return '%s'%self.manager
+
+    def exam_passed(self):
         
+        from flashsale.mmexam.models import Result
+        results = Result.objects.filter(daili_user=self.openid)
+        if results.count() > 0  and results[0].is_Exam_Funished():
+            return True
+        return False
         
     def get_Mama_Order_Rebeta_Rate(self):
         """ 获取小鹿妈妈订单提成点数 """
