@@ -17,7 +17,7 @@
 
 
 {% block container %}
-<div class="well well-lg">
+<div class="row">
 <ul class="nav nav-tabs">
   <li role="presentation" class="col-xs-4 active"><a href="#">填写资料</a></li>
   <li role="presentation" class="col-xs-4"><a href="#">支付押金</a></li>
@@ -27,18 +27,22 @@
 
 <div class="well well-lg">
 <form class="form-horizontal">
+	{% csrf_token %}
+  <input type="hidden" id="id_openid" name="openid" value="{{ openid }}">
+  {% if not wxuser.isvalid %}
   <div class="form-group">
 	<div class="col-xs-8">
 	  <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
 	</div>
-    <button type="submit" class="col-xs-4 btn btn-default">获取验证码</button>
+    <a href="#" class="col-xs-4 btn btn-default">获取验证码</a>
   </div>
   <div class="form-group">
   	<div class="col-xs-8">
       <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
     </div>
-    <button type="submit" class="btn btn-default">验证手机</button>
+    <a href="#" class="col-xs-2 btn btn-default">获取验证码</a>
   </div>
+  {% endif %}
   <div class="form-group">
   	<div class="col-xs-12 ">
     <div class="input-group ">
