@@ -22,7 +22,6 @@
 	    <span class="input-group-btn">
 	      <button id="id_requestcode_button" class="btn btn-primary" type="button" onclick="requestcode();" status="0">获验证码</button>
 	    </span>
-
 	  </div>
 	  <div id="id_verifycode_group" class="input-group">
 	    <span class="input-group-addon">验证码</span>
