@@ -1,3 +1,6 @@
+########### 2015-6-8 #################
+alter table xiaolumm_xiaolumama add column progress varchar(8) NOT NULL;
+CREATE INDEX `xiaolumm_xiaolumama_4ad8f7e` ON `xiaolumm_xiaolumama` (`progress`);
 ########### 2015-6-5 #################
 ALTER TABLE django_admin_log ADD INDEX IDX_USER_ID_CONTENT_TYPE_ID (USER_ID,CONTENT_TYPE_ID);
 CREATE INDEX `shop_trades_mergetrade_6bac1c39` ON `shop_trades_mergetrade` (`receiver_phone`);
